--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,21 @@
-# Golang CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-go/ for more details
 version: 2
 jobs:
   build:
     docker:
-      # specify the version
-      - image: circleci/golang:1.9
-
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    #### TEMPLATE_NOTE: go expects specific checkout path representing url
-    #### expecting it in the form of
-    ####   /go/src/github.com/circleci/go-tool
-    ####   /go/src/bitbucket.org/circleci/go-tool
-    working_directory: /go/src/github.com/{{ORG_NAME}}/{{REPO_NAME}}
+      - image: docker:17.05.0-ce-git
     steps:
       - checkout
-
-      # specify any bash command here prefixed with `run: `
-      - run: go get -v -t -d ./...
-      - run: go test -v ./...
+      - setup_remote_docker
+      - run:
+          name: Build application Docker image
+          command: |
+            docker build -t commentci .
+      #- deploy:
+      #    name: Push application Docker image
+      #    command: |
+      #      if [ "${CIRCLE_BRANCH}" == "master" ]; then
+      #        login="$(aws ecr get-login)"
+      #        ${login}
+      #        docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+      #        docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
+      #      fi
