--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,8 +1,29 @@
 version: 2
+workflows:
+  comment-ci:
+    jobs:
+      - build-docker:
+          context:
+            - docker-hub
+      - build-package:
 jobs:
-  build:
+  build-package:
     docker:
-      - image: docker:17.05.0-ce-git
+      - image: golang:1.15
+    steps:
+      - checkout
+      - run:
+          name: Get go packages
+          command: |
+            go get -d -v -u all
+      - run:
+          name: Build package
+          command: |
+            go build -tags netgo -a -o /go/bin/commentci ./cmd/CommentCI.go
+  build-docker:
+    docker:
+      - image: docker:20.10.3-git
+    resource_class: small
     steps:
       - checkout
       - setup_remote_docker
@@ -10,12 +31,11 @@ jobs:
           name: Build application Docker image
           command: |
             docker build -t commentci .
-      #- deploy:
-      #    name: Push application Docker image
-      #    command: |
-      #      if [ "${CIRCLE_BRANCH}" == "master" ]; then
-      #        login="$(aws ecr get-login)"
-      #        ${login}
-      #        docker tag app "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-      #        docker push "${ECR_ENDPOINT}/app:${CIRCLE_SHA1}"
-      #      fi
+      - deploy:
+          name: Push application Docker image
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "master" ]; then
+              docker login -u $DOCKER_USER -p $DOCKER_TOKEN
+              docker tag commentci "rivshiell/commentci:${CIRCLE_TAG}"
+              docker push "rivshiell/commentci:${CIRCLE_TAG}"
+            fi
