--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,11 +1,3 @@
-version: 2
-workflows:
-  comment-ci:
-    jobs:
-      - build-docker:
-          context:
-            - docker-hub
-      - build-package:
 jobs:
   build-package:
     docker:
@@ -39,3 +31,11 @@ jobs:
               docker tag commentci "rivshiell/commentci:${CIRCLE_TAG}"
               docker push "rivshiell/commentci:${CIRCLE_TAG}"
             fi
+workflows:
+  version: 2
+  comment-ci:
+    jobs:
+      - build-docker:
+          context:
+            - docker-hub
+      - build-package
